Fix display of attack rolls with gm visibility

--- a/src/styles/_globals.scss
+++ b/src/styles/_globals.scss
@@ -305,7 +305,6 @@ table.pf2-table {
 /* ----------------------------------------- */
 div[data-visibility="gm"] {
         box-sizing: border-box;
-        display: inline-block;
         border: 1px dotted;
         background: #e8e8ef;
         padding: 2px;
